Proyecto terminado funcionando y con strings de idiomas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">MyAppRegistroMedidor</string>
+    <string name="app_name">App Registro Medidor</string>
+    <string name="btn_registrar_medidor" >Registrar Medidor</string>
 </resources>
